# float-representation

./: CMakeLists.txt  README.md  float_internals.cpp  float_internals.h  float_internals_tests.cpp
